@@ -317,6 +317,7 @@ setGo: function(){
 		
 		var tmp_val = $('goButton').value.split(' ');
 		$('goButton').value = tmp_val[0]+' ('+countChecked+')';
+
 		cookie.createJSON('cb_'+this.page, this.selected_ids);
 
 		this.pageGoCount = countChecked;
